<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ComponentExampleActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="152dp"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:expandedTitleMarginStart="72dp"
            app:expandedTitleMarginBottom="28dp"
            android:fitsSystemWindows="true"
            app:expandedTitleTextAppearance="@style/TextAppearance.App.CollapsingToolbar.Expanded"
            app:collapsedTitleTextAppearance="@style/TextAppearance.App.CollapsingToolbar.Collapsed">

          <!--  <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/profile"
                android:scaleType="centerCrop"
                android:fitsSystemWindows="true"
                android:contentDescription="@string/content_description_media"
                />-->

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="@string/components"
            app:menu="@menu/top_app_bar"
            android:elevation="0dp"
            android:background="@android:color/transparent"
            app:navigationIcon="@drawable/ic_menu_24"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            />

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="100dp"
        android:layout_marginTop="152dp"
        android:clipToPadding="false">

        <LinearLayout
            android:id="@+id/linearComponentActivity"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">



            <com.google.android.material.button.MaterialButtonToggleGroup
                android:id="@+id/toggleButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <Button
                    android:id="@+id/button1toggle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="button 1"
                    style="?attr/materialButtonOutlinedStyle"
                    />
                <Button
                    android:id="@+id/button2toggle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Button 2"
                    style="?attr/materialButtonOutlinedStyle"
                    />
                <Button
                    android:id="@+id/button3toggle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Button 3"
                    style="?attr/materialButtonOutlinedStyle"
                    />
            </com.google.android.material.button.MaterialButtonToggleGroup>

            <com.google.android.material.button.MaterialButtonToggleGroup
                android:id="@+id/toggleButtonIconOnly"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <Button
                    android:id="@+id/button1toggleIconOnly"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:icon="@drawable/ic_add"
                    style="@style/Widget.App.Button.OutlinedButton.IconOnly"
                    />
                <Button
                    android:id="@+id/button2toggleIconOnly"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:icon="@drawable/ic_search_24"
                    style="@style/Widget.App.Button.OutlinedButton.IconOnly"
                    />
                <Button
                    android:id="@+id/button3toggleIconOnly"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:icon="@drawable/ic_favorite_24"
                    style="@style/Widget.App.Button.OutlinedButton.IconOnly"
                    />
            </com.google.android.material.button.MaterialButtonToggleGroup>

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chip_group_filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:singleSelection="true">

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip1"
                    style="@style/Widget.MaterialComponents.Chip.Entry"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="filter1"/>


                <com.google.android.material.chip.Chip
                    android:id="@+id/chip2"
                    style="@style/Widget.MaterialComponents.Chip.Entry"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="filter2"/>


                <com.google.android.material.chip.Chip
                    android:id="@+id/chip3"
                    style="@style/Widget.MaterialComponents.Chip.Entry"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="filter3"/>
            </com.google.android.material.chip.ChipGroup>


            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switchMaterial"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:checked="true"
                android:text="@string/label_1"/>
            <com.google.android.material.switchmaterial.SwitchMaterial
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/label_2"/>
            <com.google.android.material.switchmaterial.SwitchMaterial
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/label_3"/>
            <com.google.android.material.switchmaterial.SwitchMaterial
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/label_4"/>
            <com.google.android.material.switchmaterial.SwitchMaterial
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:enabled="false"
                android:text="@string/label_5"/>
            <CheckBox
                android:id="@+id/checkboxLabel1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:checked="true"
                android:onClick="onCheckboxClicked"
                android:text="@string/label_1"/>
            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/label_2"/>
            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/label_3"/>
            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/label_4"/>
            <CheckBox
                android:id="@+id/checkboxLabel5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:enabled="false"
                android:onClick="onCheckboxClicked"
                android:text="@string/label_5"/>

            <RadioGroup
                android:id="@+id/radio_gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radio_male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/male"/>

                <RadioButton
                    android:id="@+id/radio_female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/female"/>

            </RadioGroup>

            <Spinner
                android:id="@+id/planets_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <RadioGroup
                android:id="@+id/radioGroup"
                android:checkedButton="@+id/radio_button_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <RadioButton
                    android:id="@+id/radio_button_1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/label_1"/>
                <RadioButton
                    android:id="@+id/radio_button_2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/label_2"/>
                <RadioButton
                    android:id="@+id/radio_button_3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/label_3"/>
                <RadioButton
                    android:id="@+id/radio_button_4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/label_4"/>
                <RadioButton
                    android:id="@+id/radio_button_5"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:enabled="false"
                    android:text="@string/label_5"/>
            </RadioGroup>
        </LinearLayout>

        <!-- Scrollable content -->

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bottomAppBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        style="@style/Widget.MaterialComponents.BottomAppBar.Colored"
        app:navigationIcon="@drawable/ic_menu_24"
        app:menu="@menu/bottom_app_bar"
        app:hideOnScroll="true"
        />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_add_24"
        app:layout_anchor="@id/bottomAppBar"
        />

</androidx.coordinatorlayout.widget.CoordinatorLayout>